fixed bug in loading buffer replacement policies